# ZzClawTerm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.cursor/skills/zz-qt6-cpp20-architect/: SKILL.md
.cursor/skills/zzclawterm-blueprint/: SKILL.md  architecture.md  dependencies.md  log-engine.md  roadmap.md
.github/workflows/: build.yml  release.yml
cmake/: CompilerWarnings.cmake  Deploy.cmake  PlatformSetup.cmake
docs/: build.md
scripts/: build_unix.sh  build_windows.ps1  package.md
src/: CMakeLists.txt  main.cpp
src/business/: ZzColorScheme.h  ZzConfigManager.cpp  ZzConfigManager.h  ZzConfigManagerPrivate.cpp  ZzConfigManagerPrivate.h  ZzThemeManager.cpp  ZzThemeManager.h  ZzThemeManagerPrivate.cpp  ZzThemeManagerPrivate.h
src/core/log/: ZzColdStorage.cpp  ZzColdStorage.h  ZzColdStoragePrivate.cpp  ZzColdStoragePrivate.h  ZzLineIndex.cpp  ZzLineIndex.h  ZzLineIndexPrivate.cpp  ZzLineIndexPrivate.h  ZzLogEngine.cpp  ZzLogEngine.h  ZzLogEnginePrivate.cpp  ZzLogEnginePrivate.h  ZzMmapBuffer.cpp  ZzMmapBuffer.h  ZzMmapBufferPrivate.cpp  ZzMmapBufferPrivate.h  ZzRingBuffer.cpp  ZzRingBuffer.h  ZzRingBufferPrivate.cpp  ZzRingBufferPrivate.h
src/core/search/: ZzSearchEngine.cpp  ZzSearchEngine.h  ZzSearchEnginePrivate.cpp  ZzSearchEnginePrivate.h
src/core/terminal/: ZzCell.h  ZzTerminalCore.cpp  ZzTerminalCore.h  ZzTerminalCorePrivate.cpp  ZzTerminalCorePrivate.h  ZzTextBuffer.cpp  ZzTextBuffer.h  ZzTextBufferPrivate.cpp  ZzTextBufferPrivate.h  ZzVTParser.cpp  ZzVTParser.h  ZzVTParserPrivate.cpp  ZzVTParserPrivate.h
src/platform/: ZzPtyFactory.cpp  ZzPtyFactory.h  ZzPtyInterface.cpp  ZzPtyInterface.h  ZzPtyUnix.cpp  ZzPtyUnix.h  ZzPtyUnixPrivate.cpp  ZzPtyUnixPrivate.h  ZzPtyWindows.cpp  ZzPtyWindows.h  ZzPtyWindowsPrivate.cpp  ZzPtyWindowsPrivate.h
src/session/: ZzLocalSession.cpp  ZzLocalSession.h  ZzLocalSessionPrivate.cpp  ZzLocalSessionPrivate.h
src/ui/: ZzMainWindow.cpp  ZzMainWindow.h  ZzMainWindowPrivate.cpp  ZzMainWindowPrivate.h  ZzSearchBar.cpp  ZzSearchBar.h  ZzSearchBarPrivate.cpp  ZzSearchBarPrivate.h  ZzTerminalWidget.cpp  ZzTerminalWidget.h  ZzTerminalWidgetPrivate.cpp  ZzTerminalWidgetPrivate.h
src/utils/: ZzLRUCache.h  ZzLockFreeQueue.h
tests/: CMakeLists.txt
tests/unit/: test_line_index.cpp  test_ring_buffer.cpp  test_vt_parser.cpp
